Move around CSS class

--- a/app/app.less
+++ b/app/app.less
@@ -3,3 +3,8 @@
     outline: 0;
   }
 }
+
+// TODO: eventuall use LESS variables from twitchalerts
+.bgColor-teal {
+  background-color: #32c3a2;
+}
