Finished font selector

--- a/app/app.less
+++ b/app/app.less
@@ -8,3 +8,9 @@
 .bgColor-teal {
   background-color: #31c3a2;
 }
+
+// Make select boxes look similar to input boxes
+select {
+  border-radius: 3px;
+  height: 36px;
+}
