--- a/app/app.less
+++ b/app/app.less
@@ -1,3 +1,11 @@
+h4 {
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 1px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
 .button {
   &:focus {
     outline: 0;
@@ -8,6 +16,7 @@
 .bgColor-teal {
   background-color: #31c3a2;
 }
+
 
 // Make select boxes look similar to input boxes
 select {
