--- a/app/app.less
+++ b/app/app.less
@@ -1,3 +1,5 @@
+@import "./styles/index";
+
 h4 {
   text-transform: uppercase;
   font-size: 12px;
@@ -14,10 +16,10 @@ h4 {
 
 // TODO: eventuall use LESS variables from twitchalerts
 .bgColor-teal {
-  background-color: #31c3a2;
+  background-color: @teal;
 }
 
-// TODO: add "disable" and "enable" styles for form controls
+// TODO: add "disable" and "enable" styles for form controls to styleguide
 .input {
   &.disabled {
     opacity: 0.5;
