--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -4,3 +4,9 @@
 
 @panel-bg-color: #fcfcfc;
 @panel-border-color: #ededed;
+
+@input-border-color: #cacaca;
+@input-label-color: #7e8689;
+
+@slider-progress-color: #3c4c53;
+@slider-background-color: #eaecee;
