--- a/app/app.less
+++ b/app/app.less
@@ -14,6 +14,18 @@ h4 {
   }
 }
 
+.ico-btn {
+  font-size: 16px;
+  cursor: pointer;
+  color: #999;
+  opacity: 0.6;
+  margin-left: 10px;
+  &:first-child { margin-left: inherit }
+  &:hover { opacity: 1.0}
+}
+
+
+
 // TODO: eventuall use LESS variables from twitchalerts
 .bgColor-teal {
   background-color: @teal;
