--- a/app/styles/_colors.less
+++ b/app/styles/_colors.less
@@ -23,11 +23,10 @@
 @night-text: #7d8387;
 @night-hover: #0F1F27;
 @night-border: #2b383f;
-
 @night-slider-bg: #253239;
-
 @night-bg: #13242d;
 @night-section-bg: #09161d;
+@night-select-bg: #394951;
 
 @panel-bg-color: #fcfcfc;
 @panel-border-color: #ededed;
@@ -39,3 +38,5 @@
 @slider-background-color: #eaecee;
 
 @night-link: #B6BBBD;
+
+@onboarding-bg: #2b383f;
