--- a/app/styles/classes.less
+++ b/app/styles/classes.less
@@ -1,6 +1,10 @@
 .flex { 
   display: flex;
 }
+.flex--center {
+  align-items: center;
+  justify-content: center;
+}
 .section {
   margin-bottom: 20px;
   padding: 20px;
