--- a/app/styles/mixins.less
+++ b/app/styles/mixins.less
@@ -8,6 +8,31 @@
   left: @left;
 }
 
+/* Aspect ratio for responsive height/width */
+.aspect-ratio(@width, @height) {
+  position: relative;
+  &:before {
+    display: block;
+    content: "";
+    width: 100%;
+    padding-top: (@height / @width) * 100%;
+  }
+  > .content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    span:before{
+      content:"@{width}";
+    }
+    
+    span:after{
+      content:"@{height}";
+    }
+  }
+}
+
 /* Box shadows */
 .shadow {
   box-shadow: 0 6px 20px rgba(0,0,0,.2);
@@ -40,4 +65,9 @@
 }
 .no-padding-right {
   padding-right: 0;
+}
+
+/* Transitiions */
+.transition {
+  transition: all 275ms;
 }
