--- a/app/styles/classes.less
+++ b/app/styles/classes.less
@@ -5,6 +5,12 @@
   align-items: center;
   justify-content: center;
 }
+.flex--start {
+  align-items: flex-start;
+}
+.flex--column {
+  flex-direction: column;
+}
 .section {
   margin-bottom: 20px;
   padding: 20px;
