Header/Footer Adjustments, Add Source window design, connect onboarding fix (#285)
* starting to setup more less variables, created day night mode toggle

* more variable setup, added live page, new live button in top nav, made dropdown element

* starting to setup layout for dashboard

* using start stream button component, setting up customization service for night mode

* modal styling for day and night mode, padding and margin updates across the app

* night sliders, new test button slide-open menu, hid dashboard and live, tabs to spaces

* fixed width for Go Live button

* changed text for start streaming text button

* change selector for settings in streaming test

* formatting fixes, uncommented Live and Dashboard buttons and added disbaled attr, removed commented code

* starting to build onboarding, created in onboarding file in pages, made all steps as components, added images for onboarding steps

* onboarding html

* styling of setup boxes during imports and optimizations in onboarding

* changed components in onboarding to v-bind with CurrentView, changed onboarding and its components to typescript, image assets for icons and deco

* positioning for running setup deco, select widget step styling

* opening and closing functionality for the 6 widget modals, continued work on oboarding content and styling

* continued work on onboarding, starting choose overlays page, added mp4 in webpack for file uploads

* building overlays browse and details

* some polishing on optimize steps and select widgets

* hid onboarding button

* syntax fixes, removed unused parameter in widgets step

* continuted work on overlay browsing and details

* put in new videos for all select widgets modals, responsive photo gallery for overlays details

* layout fixes to browse overlays, hid onboarding button

* starting ui for add sources window

* continued work on add sources modal day and night, readability fix for studio contr

--- a/app/app.less
+++ b/app/app.less
@@ -10,14 +10,38 @@
 }
 
 /* Type */
+h3 {
+  font-family: 'Roboto';
+  font-size: 14px;
+  .semibold;
+}
 h4 {
+  font-family: 'Roboto';
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: .7px;
   .semibold;
   margin-bottom: 20px;
 }
+.link {
+  .semibold;
+  color: @grey;
+  .transition;
+  &:hover {
+    color: @navy;
+  }
+}
+.link--uppercase {
+  text-transform: uppercase;
+  letter-spacing: .7px;
+}
 
+/* Inputs */
+input[type="text"] {
+  &:focus {
+    box-shadow: none;
+  }
+}
 .checkbox {
   label {
     &:before {
@@ -35,11 +59,10 @@ h4 {
   display: inline-block;
 }
 .dropdown__toggle, .slide-open__open {
-  text-transform: uppercase;
-  font-size: 12px;
-  font-weight: 500;
-  letter-spacing: .7px;
+  .semibold;
   color: @grey;
+  text-transform: uppercase;
+  letter-spacing: .7px;
   .fa {
     font-size: 8px;
     vertical-align: middle;
@@ -154,7 +177,7 @@ h4 {
   margin-right: 10px;
   text-transform: uppercase;
   font-size: 12px;
-  font-weight: 500;
+  .semibold;
   letter-spacing: .7px;
   color: @grey;
   .fa {
@@ -226,6 +249,9 @@ select {
   .border {
     border: 1px solid transparent;
   }
+  h3 {
+    color: @grey;
+  }
   .checkbox {
     input:checked~label {
       color: @white;
@@ -236,6 +262,16 @@ select {
         border-color: @teal-light-opac;
       }
     }
+  }
+  .link {
+    &:hover {
+      color: @white;
+    }
+  }
+  input[type="text"] {
+    background: @night-secondary;
+    color: @white;
+    border-color: transparent;
   }
   .dropdown__menu {
     background-color: @night-accent-light;
