--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -11,8 +11,16 @@ button, .button {
 .button--trans {
   background: transparent;
   color: @grey;
+  .fa {
+    color: @grey;
+    .transition;
+  }
   &:hover {
     color: @navy;
+    background: transparent;
+    .fa {
+      color: @navy;
+    }
   }
 }
 .button--semi-opac {
@@ -20,6 +28,9 @@ button, .button {
   &:hover {
     background: rgba(255, 255, 255, .14);
   }
+}
+.button--100 {
+  width: 100%;
 }
 .ico-btn {
   font-size: 13px;
@@ -46,6 +57,9 @@ button, .button {
   justify-content: center;
   align-content: center;
 }
+.button--twitch, .button--yt {
+  width: 48%;
+}
 .square-button {
   .radius;
   .transition;
@@ -57,13 +71,13 @@ button, .button {
   color: @white;
   font-size: 16px;
 }
-.square-button--twitch {
+.square-button--twitch, .button--twitch {
   background: #6441A4;
   &:hover {
     background: lighten(#6441A4,4%)
   }
 }
-.square-button--yt {
+.square-button--yt, .button--yt {
   background: #D22222;
   &:hover {
     background: lighten(#D22222,4%)
@@ -93,5 +107,10 @@ button, .button {
     &:hover {
       color: @white;
     }
+  }
+  .button--default {
+    background: rgba(255, 255, 255, .1);
+    border-color: transparent;
+    color: @white;
   }
 }
