--- a/app/styles/classes.less
+++ b/app/styles/classes.less
@@ -5,6 +5,9 @@
   align-items: center;
   justify-content: center;
 }
+.flex--space-between {
+  justify-content: space-between;
+}
 .flex--start {
   align-items: flex-start;
 }
