--- a/app/styles/_colors.less
+++ b/app/styles/_colors.less
@@ -14,7 +14,7 @@
 
 @day-primary: #ffffff;
 @day-secondary: #F7F9F9;
-@day-border: #dddddd;
+@day-border: #F0F2F2;
 
 @night-primary: #13242d;
 @night-secondary: #09161d;
@@ -24,6 +24,7 @@
 @night-hover: #0F1F27;
 @night-border: #2b383f;
 @night-slider-bg: #253239;
+@night-input-bg: #253239;
 @night-bg: #13242d;
 @night-section-bg: #09161d;
 @night-select-bg: #394951;
