active button fix (#299)
* starting to setup more less variables, created day night mode toggle

* more variable setup, added live page, new live button in top nav, made dropdown element

* starting to setup layout for dashboard

* using start stream button component, setting up customization service for night mode

* modal styling for day and night mode, padding and margin updates across the app

* night sliders, new test button slide-open menu, hid dashboard and live, tabs to spaces

* fixed width for Go Live button

* changed text for start streaming text button

* change selector for settings in streaming test

* formatting fixes, uncommented Live and Dashboard buttons and added disbaled attr, removed commented code

* starting to build onboarding, created in onboarding file in pages, made all steps as components, added images for onboarding steps

* onboarding html

* styling of setup boxes during imports and optimizations in onboarding

* changed components in onboarding to v-bind with CurrentView, changed onboarding and its components to typescript, image assets for icons and deco

* positioning for running setup deco, select widget step styling

* opening and closing functionality for the 6 widget modals, continued work on oboarding content and styling

* continued work on onboarding, starting choose overlays page, added mp4 in webpack for file uploads

* building overlays browse and details

* some polishing on optimize steps and select widgets

* hid onboarding button

* syntax fixes, removed unused parameter in widgets step

* continuted work on overlay browsing and details

* put in new videos for all select widgets modals, responsive photo gallery for overlays details

* layout fixes to browse overlays, hid onboarding button

* starting ui for add sources window

* continued work on add sources modal day and night, readability fix for studio control labels on night mode

* working on add source window

--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -8,6 +8,12 @@ button, .button {
 .button--action {
   background-color: @teal-bright;
   color: @white;
+  &:hover {
+    background-color: lighten(@teal-bright, 4%);
+  }
+  &:hover {
+    background-color: @teal-bright;
+  }
 }
 .button--trans {
   background: transparent;
@@ -28,6 +34,9 @@ button, .button {
   background: rgba(255, 255, 255, .1);
   &:hover {
     background: rgba(255, 255, 255, .14);
+  }
+  &:focus {
+    background: rgba(255, 255, 255, .1);
   }
 }
 .button--100 {
@@ -75,19 +84,25 @@ button, .button {
 .square-button--twitch, .button--twitch {
   background: #6441A4;
   &:hover {
-    background: lighten(#6441A4,4%)
+    background: lighten(#6441A4,4%);
+  }
+  &:focus {
+    background: #6441A4;
   }
 }
 .square-button--yt, .button--yt {
   background: #D22222;
   &:hover {
-    background: lighten(#D22222,4%)
+    background: lighten(#D22222,4%);
+  }
+  &:focus {
+    background: #D22222;
   }
 }
 .square-button--fb {
   background: #3B5998;
   &:hover {
-    background: lighten(#3B5998,4%)
+    background: lighten(#3B5998,4%);
   }
 }
 .square-button--twitter {
