live button fix (#303)

--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -11,7 +11,7 @@ button, .button {
   &:hover {
     background-color: lighten(@teal-bright, 4%);
   }
-  &:hover {
+  &:focus {
     background-color: @teal-bright;
   }
 }
