Styling of all inputs for day/night plus a few various fixes (#317)
* styling for day mode font selects, new layout for inputs and their labels, inactive and active state for record button

* converted selects to multi select vue component, colorpicker positioning, styling for font selects

* darkened input borders, slider styling, slider tooltips in windows, styling of colorpicker menu, checkbox positioning

* small changes to mixer items, styling for integer inputs

* night mode for colorpicker and multiselect

* starting work on setting window

* more input stying, settings window styling, password inputs, hot keys, made recording animation more pronounced

* settings modal fixes with scrolling, made side nav fixed

* styled editable list in modals, example is image slide show

* editable list night mode

* fix list input

* made username also clickable to logout, reduced height of studio controls for more vcode, darkened day mode check boxes

* removed active class on record button

* fixed onboarding and streaming test issues

* spacing cleanup for blank lines after functions and css rules

* got all spacing back in functions, unified padding on typescript classes, removed all trailing whitespace

--- a/app/app.less
+++ b/app/app.less
@@ -1,5 +1,7 @@
 @import "./styles/index";
-
+body {
+  color: @navy;
+}
 .main {
   background: @white;
 }
@@ -22,6 +24,7 @@ h4 {
   letter-spacing: .7px;
   .semibold;
   margin-bottom: 20px;
+  color: @grey;
 }
 .link {
   .semibold;
@@ -34,21 +37,6 @@ h4 {
 .link--uppercase {
   text-transform: uppercase;
   letter-spacing: .7px;
-}
-
-/* Inputs */
-input[type="text"] {
-  &:focus {
-    box-shadow: none;
-  }
-}
-.checkbox {
-  label {
-    &:before {
-      background: transparent;
-      border-color: @day-border;
-    }
-  }
 }
 
 /* Wrap classes 'dropdown__toggle' and 'dropdown__menu' in class 'dropdown' */
@@ -173,7 +161,7 @@ input[type="text"] {
 }
 .tab-button {
   border-bottom: 3px solid transparent;
-  padding: 20px 0;
+  padding: 16px 0;
   margin-right: 10px;
   text-transform: uppercase;
   font-size: 12px;
