--- a/app/styles/_colors.less
+++ b/app/styles/_colors.less
@@ -14,9 +14,11 @@
 
 @day-primary: #ffffff;
 @day-secondary: #F7F9F9;
+@day-hover: #F7F9F9; 
 @day-border: #F0F2F2;
-@day-input-border: #EEF1F3;
+@day-input-border: #d4d9dd;
 @day-input-bg: #FDFEFE;
+@day-focus-border: darken(#d4d9dd, 4%);
 
 @night-primary: #13242d;
 @night-secondary: #09161d;
