--- a/app/styles/mixins.less
+++ b/app/styles/mixins.less
@@ -51,6 +51,22 @@
   border: 1px solid @day-border;
 }
 
+.night-border {
+  border: 1px solid @night-border;
+}
+
+// Typography
+.normal {
+  font-weight: 400;
+}
+.semibold {
+  font-weight: 500;
+  src: local('Roboto Medium');
+}
+.bold {
+  font-weight: 700;
+}
+
 // Hovers
 .icon-hover {
   color: @grey;
