--- a/app/styles/classes.less
+++ b/app/styles/classes.less
@@ -14,6 +14,12 @@
 .flex--column {
   flex-direction: column;
 }
+.flex__column {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+  width: 100%;
+}
 .section {
   padding: 20px 20px 0;
   background: @day-primary;
